update exactness in fetch response

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -191,14 +191,15 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 
 ## Exactness
 
-Amount acceptance by the biller.
+Limits on acceptable payment amounts set by the biller.
 
-| type              | description           |
-| ----------------- | --------------------- |
-| `Exact`           | Exact amount          |
-| `Exact and below` | Exact amount or below |
-| `Exact and above` | Exact amount or above |
-| `Any`             | Any exactness         |
+| type              | description                                                                           |
+| ----------------- | ------------------------------------------------------------------------------------- |
+| `Exact`           | Only the exact amount specified in fetched bill can be paid                           |
+| `Exact and below` | Amount specified in fetched bill or less can be paid                                  |
+| `Exact and above` | Amount specified in fetched bill or more can be paid                                  |
+| `Any`             | Any amount can be paid                                                                |
+| `RANGE`           | Amount within specified minAmount and maxAmount specified in fetched bill can be paid |
 
 ## Payment Limit
 
