--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -139,7 +139,7 @@ In the response you either get the bill details, or “Processing” status if t
 					"dueDate": "2021-09-26"
 				},
 				"billerRefId": "4047076513",
-				"exactness": "ANY",
+				"exactness": "Exact",
 				"paymentLimits": [
 					{
 						"maxLimit": 20000000,
