--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -134,6 +134,16 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 | amount       | `integer`                     | Amount in paise                      |
 | timestamp    | `date-time`                   | Timestamp                            |
 
+## Bill
+
+The Bill object contains information about a specific bill to be paid.
+
+| Parameter    | Type      | Description                                   |
+| ------------ | --------- | --------------------------------------------- |
+| `billNumber` | `string`  | Unique identifier for the bill                |
+| `amount`     | `integer` | Amount to be paid for the bill in paise       |
+
+
 ## Bill Status
 
 | type         | description                                       |
@@ -180,7 +190,7 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 
 ## Biller Selection Type
 
-| Type       | Description                                                       |
+| type       | description                                                       |
 |------------|-------------------------------------------------------------------|
 | `SINGLE`   | User can pay only one bill from the fetch response                |
 | `MULTIPLE` | User can pay any combination of bills from the fetch response     |
@@ -188,7 +198,7 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 
 ## Biller Response Type
 
-| Type         | Description                                               |
+| type         | description                                               |
 |--------------|-----------------------------------------------------------|
 | `SINGLE`     | Biller returns a single bill in the fetch response        |
 | `LIST`       | Biller returns multiple bills in the fetch response       |
@@ -510,5 +520,6 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | paymentDetails | [Payment Details](#payment-details) | Payment Details for the transaction                             |
 | additionalInfo | `{"name":"value"}[]`                | Additional information of the bill sent by the biller           |
 | refundStatus   | [Refund Status](#refund-status)     | Refund status if the payment failed and the amount was debited. |
+| bills          | [Bill[]](#bill)                     | Details of bills paid. Present for LIST billers only.           |
 
 <WasPageHelpful />
