Added billerResponseType note

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -493,6 +493,8 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | billerResponseType  | [Biller Response Type](#biller-response-type)   | Indicates whether the biller provides a single bill ('SINGLE') or multiple bills ('LIST') |
 | billerSelectionType | [Biller Selection Type](#biller-selection-type) | Specifies how users can select bills for payment (only applicable for LIST response type) |
 
+**Note:** The `billerResponseType` field indicates which bill data field to use. For 'SINGLE' type, use the `bill` field (contains zero or one bill). For 'LIST' type, use the `bills` field (contains one or more bills in an array).
+
 <hr class="primary" />
 
 ## Payment Request
