add bill details to successful fetch and payment events

--- a/content/payments/billpay/pre-built-screens/webhooks.mdx
+++ b/content/payments/billpay/pre-built-screens/webhooks.mdx
@@ -95,6 +95,15 @@ Below are the parameter tables and sample payloads for the listed events. Note t
             "name": "example",
             "value": "ABC"
         }
+    ],
+    "billDetails": [
+        {
+            "billAmount": "101.0",
+            "billNumber": "6657801290",
+            "billDate": "2024-03-01",
+            "customerName": "Ram Charan",
+            "dueDate": "2024-03-20"
+        }
     ]
 }`}
         </CodeBlockWithCopy>
@@ -241,6 +250,21 @@ Below are the parameter tables and sample payloads for the listed events. Note t
                 <td>BBPS Reference ID</td>
                 <td>
                     <code>CMA0I65RCU2I32C3L0H0KNYQYAG40021831</code>
+                </td>
+            </tr>
+            <tr>
+                <td>billDetails</td>
+                <td>Array of Objects</td>
+                <td>
+                    Contains details of bills fetched. For 'SINGLE' billers, this array will have 0 or 1 element. For 'LIST' billers, it may contain multiple elements.
+                </td>
+                <td>
+                    <code>[&#123;&quot;billAmount&quot;: &quot;101.0&quot;, &quot;billNumber&quot;: &quot;6657801290&quot;, &quot;billDate&quot;: &quot;2024-03-01&quot;, &quot;customerName&quot;: &quot;Ram Charan&quot;, &quot;dueDate&quot;: &quot;2024-03-20&quot;&#125;]</code>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="4">
+                    <strong>Note:</strong> The <code>billDetails</code> array is now the primary source for bill details, replacing individual bill fields (billAmount, billNumber, billDate, customerName, dueDate). These individual fields are deprecated and will be removed in future versions. Always use <code>billDetails</code> for accessing bill information.
                 </td>
             </tr>
         </table>
@@ -434,7 +458,16 @@ Below are the parameter tables and sample payloads for the listed events. Note t
     "orderId": "H001234566666",
     "event": "bill_payment_success",
     "refId": "CMA0I65RCU2I32C3L0H0KNYQYAG40021831",
-    "paidOn": "02-01-2006 15:04:05"
+    "paidOn": "02-01-2006 15:04:05",
+    "billDetails": [
+        {
+            "billAmount": "101.0",
+            "billNumber": "6657801290",
+            "billDate": "2024-03-01",
+            "customerName": "Ram Charan",
+            "dueDate": "2024-03-20"
+        }
+    ]
 }`}
         </CodeBlockWithCopy>
         <table>
@@ -589,6 +622,21 @@ Below are the parameter tables and sample payloads for the listed events. Note t
                 <td>BBPS Reference ID</td>
                 <td>
                     <code>CMA0I65RCU2I32C3L0H0KNYQYAG40021831</code>
+                </td>
+            </tr>
+            <tr>
+                <td>billDetails</td>
+                <td>Array of Objects</td>
+                <td>
+                    Contains details of bills paid. For 'SINGLE' billers, this array will have 0 or 1 element. For 'LIST' billers, it may contain multiple elements.
+                </td>
+                <td>
+                    <code>[&#123;&quot;billAmount&quot;: &quot;101.0&quot;, &quot;billNumber&quot;: &quot;6657801290&quot;, &quot;billDate&quot;: &quot;2024-03-01&quot;, &quot;customerName&quot;: &quot;Ram Charan&quot;, &quot;dueDate&quot;: &quot;2024-03-20&quot;&#125;]</code>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="4">
+                    <strong>Note:</strong> The <code>billDetails</code> array is now the primary source for bill details, replacing individual bill fields (billAmount, billNumber, billDate, customerName, dueDate). These individual fields are deprecated and will be removed in future versions. Always use <code>billDetails</code> for accessing bill information.
                 </td>
             </tr>
         </table>
