add bills to transactions

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -334,6 +334,7 @@ Maxium amount accepted by the biller for the [Payment Channel](#payment-channel)
 | status               | [Transaction Status](#transaction-status) | Transaction Status                   |
 | transactionId        | `string`                                  | Setu Transaction ID                  |
 | partnerRefId         | `string` (6 - 35 characters)              | Payment Reference ID tagged by agent |
+| bills                | [Bill[]](#bill)                           | Details of bills paid                |
 | billerId             | `string`                                  | BBPS Biller ID                       |
 | amount               | `integer`                                 | Amount in paise                      |
 | customerMobileNumber | `string` (6, 10 and 20 digits)            | Customer Mobile Number               |
