update fetch response example

--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -130,14 +130,32 @@ In the response you either get the bill details, or “Processing” status if t
 						"value": "Samuraipsychadelic"
 					}
 				],
-				"bill": { // optional - not present if biller does not support it
-					"amount": 301500,
+				"bill": { // optional - selective present for SINGLE billers
+					"amount": 300000,
 					"billDate": "2021-09-13",
 					"billNumber": "8394852342371080869",
 					"billPeriod": "Monthly",
 					"customerName": "William Miller",
-					"dueDate": "2021-09-26"
+					"dueDate": "2021-09-26",
+					"paymentOptions": [
+						{
+							"name": "3 month EMI",
+							"amount": 900000,
+							"minAmount": 300000,
+							"maxAmount": 1500000,
+							"amountMultiple": 10000
+						},
+						{
+							"name": "6 month EMI",
+							"amount": 1800000,
+							"minAmount": 600000,
+							"maxAmount": 3000000,
+							"amountMultiple": 10000
+						}
+					]
 				},
+				"billerResponseType": "SINGLE",
+				"billerSelectionType": null,
 				"billerRefId": "4047076513",
 				"exactness": "Exact",
 				"paymentLimits": [
