Revert "fix formatting"
This reverts commit 8d8a0c22824145d829c180ac4579a1bc93c04882.

--- a/content/payments/billpay/api-integration/apis.mdx
+++ b/content/payments/billpay/api-integration/apis.mdx
@@ -277,39 +277,36 @@ For your convenience, Setu also provides actions to list data in bulk, that can 
     >
         List disputes
     </a>
-    —lists all the raised disputes using the 
-	<a
+    —lists all the raised disputes using the <a
         target="_blank"
         href="/payments/billpay/api-integration/api-reference#/category~Manage_Dispute/operation~DisputeRequest"
     >
         Dispute API
-    </a>
+    </a>.
 -   <a
         target="_blank"
         href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getFetchedBills"
     >
         List fetched Bills
     </a>
-    —lists all the fetched bills that were fetched using 
-	<a
+    —lists all the fetched bills that were fetched using <a
         target="_blank"
         href="/payments/billpay/api-integration/api-reference#/category~Fetch_bill/operation~FetchRequest"
     >
         Fetch API
-    </a>
+    </a>.
 -   <a
         target="_blank"
         href="/payments/billpay/api-integration/api-reference#/category~Take_bulk_actions/operation~getTxns"
     >
         List paid bills
     </a>
-    —lists all the bill pay transactions paid using 
-	<a
+    —lists all the bill pay transactions paid using <a
         target="_blank"
         href="/payments/billpay/api-integration/api-reference#/category~Pay_bill/operation~PaymentRequest"
     >
         Pay API
-    </a>
+    </a>.
 
 <hr class="primary" />
 
