add selectedPaymentOptions to objects.mdx

--- a/content/payments/billpay/api-integration/objects.mdx
+++ b/content/payments/billpay/api-integration/objects.mdx
@@ -127,12 +127,13 @@ Details pertaining to the Agent which initiates the transaction. Values of the f
 
 ## Payment Details
 
-| parameter    | type                          | description                          |
-| ------------ | ----------------------------- | ------------------------------------ |
-| mode         | [Payment Mode](#payment-mode) | Payment Mode                         |
-| paymentRefId | `string` (6 - 35 characters)  | Payment Reference ID tagged by agent |
-| amount       | `integer`                     | Amount in paise                      |
-| timestamp    | `date-time`                   | Timestamp                            |
+| parameter              | type                                                  | description                          |
+| ---------------------- | ----------------------------------------------------- | ------------------------------------ |
+| mode                   | [Payment Mode](#payment-mode)                         | Payment Mode                         |
+| paymentRefId           | `string` (6 - 35 characters)                          | Payment Reference ID tagged by agent |
+| amount                 | `integer`                                             | Amount in paise                      |
+| timestamp              | `date-time`                                           | Timestamp                            |
+| selectedPaymentOptions | [Selected Payment Option](#selected-payment-option)[] | Array of selected payment options    |
 
 ## Bill
 
@@ -229,6 +230,14 @@ The Bill object contains information about a specific bill to be paid.
 | minAmount      | `integer` | The minimum amount that can be paid for this option in paise         |
 | maxAmount      | `integer` | The maximum amount that can be paid for this option in paise         |
 | amountMultiple | `integer` | The payment amount should be a multiple of this value in paise       |
+
+
+## Selected Payment Option
+
+| Parameter | Type      | Description                                    |
+| --------- | --------- | ---------------------------------------------- |
+| name      | `string`  | The display name of the option from bill fetch |
+| amount    | `integer` | The amount being paid for this option in paise |
 
 ## Exactness
 
